# security_asset

./: .Cargo.toml.swp  .gitignore  .ignore  BUILD.gn  Cargo.toml  README.md  README_zh.md  asset.gni  bundle.json  hisysevent.yaml  rustfmt.toml
db_operator/: BUILD.gn  Cargo.toml
db_operator/src/: database.rs  database_table_helper.rs  lib.rs  sqlite3_ffi.rs  statement.rs  table.rs  types.rs
db_operator/test/: mod.rs
docs/asset_sample/: .gitignore  README.md  oh-package-lock.json5  oh-package.json5
docs/ndk/: asset_api.h  asset_type.h
docs/reference/: asset-js-guidelines.md
docs/security/: Readme-CN.md  asset-js-add.md  asset-js-guidelines.md  asset-js-query-auth.md  asset-js-query.md  asset-js-remove.md  asset-js-update.md  asset-native-add.md  asset-native-guidelines.md  asset-native-query.md  asset-native-remove.md  asset-native-update.md  asset-overview.md  asset-scenario1.md  asset-scenario2.md
etc/init/: BUILD.gn
frameworks/common/: BUILD.gn  Cargo.toml
frameworks/constants/: BUILD.gn  Cargo.toml
frameworks/definition/: BUILD.gn  Cargo.toml
frameworks/idl/: Cargo.toml
frameworks/ipc/: BUILD.gn  Cargo.toml
frameworks/ipc/src/: lib.rs
frameworks/ipc_define/: BUILD.gn  Cargo.toml
frameworks/ipc_interface/: BUILD.gn  Cargo.toml
frameworks/ipc_proxy/: BUILD.gn  Cargo.toml
frameworks/js/: @ohos.base.d.ts  @ohos.security.asset.d.ts
frameworks/utils/: BUILD.gn  Cargo.toml
interfaces/inner_api/c/: BUILD.gn  Cargo.toml
interfaces/inner_api/c/inc/: asset_api.h  asset_inner_api.h  asset_inner_type.h  asset_type.h
interfaces/inner_api/c/include/: asset_api.h  asset_type.h
interfaces/inner_api/c/src/: asset_api.c  asset_ffi.rs
interfaces/inner_api/rs/: BUILD.gn  Cargo.toml
interfaces/inner_api/rs/src/: asset_request.rs  binding.rs  lib.rs  proxy.rs
interfaces/kits/c/: BUILD.gn  Cargo.toml  libasset.ndk.json
interfaces/kits/c/inc/: asset_api.h  asset_type.h  native_asset_api.h
interfaces/kits/c/src/: asset_api.c  asset_ffi.rs  lib.rs  native_asset_api.c
sa_profile/: 3511.json  65856.json  BUILD.gn
scripts/: 49fbc428-af44-11ec-b909-0242ac120002.sec  cov.sh  huks_patch.patch  huks_service.json  push_asset.bat  push_asset_cfg.bat  push_huks.bat  永久禁用selinux.bat
services/asset_huks/: BUILD.gn  Cargo.toml
services/asset_huks/src/: hukkey.rs  hukkey_ffi.rs
services/asset_huks/tests/: test_hukkey.rs
services/constants/: BUILD.gn  (+1 more)
services/core_service/: BUILD.gn  Cargo.toml
services/core_service/etc/init/: BUILD.gn  assetserver.cfg  assetserver.rc
services/core_service/src/: access_token.rs  argument_check.rs  calling_info.rs  calling_process_info.rs  definition_inner.rs  lib.rs  listener.rs  operations.rs  stub.rs  sys_event.rs  trace.rs  trace_scope.rs
services/core_service/src/argument_check/: tag_check.rs  value_check.rs
services/core_service/src/calling_info/: calling_type.rs  calling_user_id.rs
services/core_service/src/calling_process_info/: calling_owner_type.rs  calling_owner_user_id.rs  calling_type.rs  calling_user_id.rs
services/core_service/src/operations/: common.rs  file_operator.rs  operation_add.rs  operation_common.rs  operation_post_query.rs  operation_pre_query.rs  operation_query.rs  operation_remove.rs  operation_update.rs  param_check.rs
services/core_service/src/operations/common/: argument_check.rs  crypto_adapter.rs  file_operator.rs
services/core_service/src/operations/operation_common/: crypto_adapter.rs  db_adapter.rs  db_data_map_adapter.rs  default_params.rs  extra_params.rs  file_operator.rs  hasher.rs
services/core_service/src/operations/param_check/: check_tag.rs  required_tag.rs  tag_value_match.rs  value_validity_check.rs
services/crypto_manager/: BUILD.gn  Cargo.toml
services/crypto_manager/crypto_manager_wrapper/: BUILD.gn
services/crypto_manager/crypto_manager_wrapper/inc/: crypto_wrapper.h  hks_key.h  hks_key_wrapper.h
services/crypto_manager/crypto_manager_wrapper/src/: crypto_wrapper.cpp  hks_key.cpp  hks_key_wrapper.cpp
services/crypto_manager/src/: crypto.rs  crypto_manager.rs  hukkey.rs  hukkey_ffi.rs  huks_ffi.rs  huks_wrapper.c  huks_wrapper.h  identity_scope.rs  lib.rs  secret_key.rs
services/crypto_manager/tests/: test_hukkey.rs
services/db_operator/: BUILD.gn  Cargo.toml
services/db_operator/src/: database.rs  database_table_helper.rs  lib.rs  sqlite3_ffi.rs  sqlite3_wrapper.c  statement.rs  table.rs  transaction.rs  types.rs
services/db_operator/src/test/: lib.rs  test_database.rs  test_table.rs
services/os_dependency/: BUILD.gn  Cargo.toml
services/os_dependency/bms_api_wrapper/: BUILD.gn
services/os_dependency/bms_api_wrapper/inc/: bms_api_wrapper.h
services/os_dependency/bms_api_wrapper/src/: bms_api_wrapper.cpp
services/os_dependency/common_event_wrapper/: BUILD.gn
services/os_dependency/common_event_wrapper/inc/: system_event_wrapper.h
services/os_dependency/common_event_wrapper/src/: system_event_wrapper.cpp
services/os_dependency/inc/: bms_wrapper.h  os_account_wrapper.h  system_ability_wrapper.h  system_event_wrapper.h
services/os_dependency/os_account_wrapper/: BUILD.gn
services/os_dependency/os_account_wrapper/inc/: os_account_wrapper.h
services/os_dependency/os_account_wrapper/src/: os_account_wrapper.cpp
services/os_dependency/src/: bms_wrapper.cpp  lib.rs  os_account_wrapper.cpp  system_ability_wrapper.cpp  system_event_wrapper.cpp
test/unittest/crypto_manager_test/: BUILD.gn  Cargo.toml
test/unittest/crypto_manager_test/src/: lib.rs
test/unittest/db_operator_test/: BUILD.gn  Cargo.toml
test/unittest/db_operator_test/src/: lib.rs  test_for_database.rs  test_for_helper.rs  test_for_table.rs
test/unittest/kits_ndk/: BUILD.gn
test/unittest/kits_ndk/inc/: asset_add_test.h  asset_query_test.h  asset_remove_test.h  asset_test_common.h  asset_update_test.h
test/unittest/kits_ndk/src/: asset_add_test.cpp  asset_operation_test.cpp  asset_query_test.cpp  asset_remove_test.cpp  asset_test_common.cpp  asset_update_test.cpp  c_api_test.cpp
各种脚本/: huks_service.json  push_asset.bat  push_asset_cfg.bat
(+169 files in other folders)
