# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

COMPONENT_DIR = "//base/security/asset"

group("asset_component") {
  deps = [
    "$COMPONENT_DIR/interfaces/inner_api/rs:asset_sdk",
    "$COMPONENT_DIR/interfaces/kits/c:asset_ndk",
    "$COMPONENT_DIR/sa_profile:asset_sa_profiles",
    "$COMPONENT_DIR/services/core_service:asset_service",
    "$COMPONENT_DIR/services/crypto_manager:crypto_manager",
    "$COMPONENT_DIR/services/db_operator:db_operator",
  ]

  if (support_jsapi) {
    deps += [ "//$COMPONENT_DIR/frameworks/js/napi:asset_napi" ]
  }
}

# need set different name from asset_test for building script limit
group("asset_bin_test") {
  testonly = true
  deps = [
    "$COMPONENT_DIR/services/crypto_manager:crypto_manager_test",
    "$COMPONENT_DIR/services/db_operator:db_operator_test",
    "$COMPONENT_DIR/test/unittest/inner_api_c:asset_c_api_test",
    "$COMPONENT_DIR/test/unittest/inner_api_rust:asset_rust_test",
    "$COMPONENT_DIR/test/unittest/kits_ndk:asset_c_ndk_test",
  ]
}
