[workspace]
members = [
    "frameworks/definition",
    "frameworks/ipc",
    "frameworks/os_dependency/log",
    "frameworks/utils",
    "interfaces/kits/c",
    "services/constants",
    "services/core_service",
    "services/crypto_manager",
    "services/db_operator",
    "services/os_dependency",
    "test/unittest/inner_api_rust",
    "test/unittest/module_test"
]
