[package]
name = "asset_ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc_rust = { path = "../../../../../foundation/communication/ipc/interfaces/innerkits/rust/" }
asset_definition = { path = "../definition" }
asset_log = { path = "../os_dependency/log" }
