# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
SUBSYSTEM_DIR = "//base/security/asset"

ohos_rust_shared_library("asset_huks") {
    sources = [
        "src/hukkey_ffi.rs",
        "src/hukkey.rs",
        "src/lib.rs",
    ]

    deps = [
        "$SUBSYSTEM_DIR/frameworks/common:asset_common_lib",
    ]

    external_deps = [
        "hilog:hilog_rust",
        "huks:libhukssdk",
    ]

    crate_name = "asset_huks"
    crate_type = "dylib"

    subsystem_name = "security"
    part_name = "asset"
}

module_output_path = "asset/crypto"

ohos_rust_unittest("asset_huks_test") {
    module_out_path = module_output_path
    sources = [
        "tests/test_hukkey.rs",
    ]
    deps = [
        "$SUBSYSTEM_DIR/services/asset_huks:asset_huks",
    ]
    subsystem_name = "security"
    part_name = "asset"
}