[package]
name = "core_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asset_common = { path = "../../frameworks/common" }
asset_ipc_interface = { path = "../../frameworks/ipc_interface" }
asset_ipc_proxy = { path = "../../frameworks/ipc_proxy" }
db_operator = { path = "../../services/db_operator" }
crypto_manager = { path = "../crypto_manager" }
