[package]
name = "core_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asset_constants = { path = "../../frameworks/constants" }
asset_crypto_manager = { path = "../crypto_manager" }
asset_db_operator = { path = "../db_operator" }
asset_definition = { path = "../../frameworks/definition" }
asset_file_operator = { path = "../../frameworks/os_dependency/file" }
asset_hasher = { path = "../../frameworks/utils/hasher" }
asset_ipc = { path = "../../frameworks/ipc" }
asset_log = { path = "../../frameworks/os_dependency/log" }
