# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
COMPONENT_DIR = "//base/security/asset"

ohos_rust_static_library("asset_crypto_manager") {
  sources = [
    "src/crypto.rs",
    "src/huks_ffi.rs",
    "src/lib.rs",
  ]
  deps = [
    "$COMPONENT_DIR/frameworks/definition:asset_definition",
    "$COMPONENT_DIR/frameworks/os_dependency/log:asset_log",
    "crypto_manager_wrapper:crypto_manager_wrapper",
  ]

  external_deps = [
    "huks:libhukssdk",
    "ipc:ipc_rust",
  ]

  crate_name = "asset_crypto_manager"
  crate_type = "rlib"
  subsystem_name = "security"
  part_name = "asset"
}
