# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
COMPONENT_DIR = "//base/security/asset"

ohos_rust_static_library("asset_db_operator") {
  sources = [
    "src/database.rs",
    "src/database_table_helper.rs",
    "src/lib.rs",
    "src/sqlite3_ffi.rs",
    "src/statement.rs",
    "src/table.rs",
    "src/transaction.rs",
    "src/types.rs",
  ]
  deps = [
    "$COMPONENT_DIR/frameworks/definition:asset_definition",
    "$COMPONENT_DIR/frameworks/os_dependency/log:asset_log",
    "//third_party/sqlite:sqlite",
  ]

  crate_name = "asset_db_operator"
  crate_type = "rlib"
  subsystem_name = "security"
  part_name = "asset"
}
