# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

COMPONENT_DIR = "//base/security/asset"

ohos_static_library("asset_os_dependency") {
  subsystem_name = "security"
  part_name = "asset"
  include_dirs = [
    "inc",
    "$COMPONENT_DIR/frameworks/os_dependency/log/inc",
  ]
  sources = [
    "src/os_account_wrapper.cpp",
    "src/system_event_wrapper.cpp",
    "src/bms_wrapper.cpp",
  ]
  deps = [
    ":asset_service_ffi",
    "$COMPONENT_DIR/frameworks/os_dependency/memory:asset_mem",
    "$COMPONENT_DIR/interfaces/kits/c:asset_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_innerkits",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
  ]
}

ohos_rust_shared_ffi("asset_service_ffi") {
  sources = [ "src/lib.rs" ]
  deps = [
    "$COMPONENT_DIR/frameworks/common:asset_common",
    "$COMPONENT_DIR/frameworks/os_dependency/file:asset_file_operator",
    "$COMPONENT_DIR/frameworks/utils/hasher:asset_hasher",
    "$COMPONENT_DIR/services/db_operator:asset_db_operator",
    "$COMPONENT_DIR/services/crypto_manager:asset_crypto_manager",
    "//third_party/rust/crates/libc:lib",
  ]
  external_deps = [ "hilog:hilog_rust" ]
  crate_name = "asset_service_ffi"
  subsystem_name = "security"
  part_name = "asset"
}
