# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SUBSYSTEM_DIR = "//base/security/asset"

config("asset_c_sdk_config") {
    include_dirs = [ "include" ]
}

ohos_shared_library("asset_c_sdk") {
    subsystem_name = "security"
    part_name = "asset"
    public_configs = [ ":asset_c_sdk_config" ]

    sources = [
        "src/asset_api.c",
    ]
    deps = [
        "$SUBSYSTEM_DIR/interfaces/inner_api/rs:asset_rust_binding"
    ]
}