# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

COMPONENT_DIR = "//base/security/asset"

config("asset_sdk_config") {
  include_dirs = [ "inc" ]
}

ohos_shared_library("asset_sdk") {
  sources = [ "src/asset_api.c" ]
  public_configs = [ ":asset_sdk_config" ]
  deps = [
    ":asset_sdk_ffi",
    "$COMPONENT_DIR/frameworks/os_dependency/memory:asset_mem",
  ]
  external_deps = [
    "hilog:libhilog",
    "c_utils:utils",
    ]
  subsystem_name = "security"
  part_name = "asset"
}

ohos_rust_shared_ffi("asset_sdk_ffi") {
  sources = [ "src/asset_ffi.rs" ]
  deps = [
    "$COMPONENT_DIR/frameworks/common:asset_common",
    "$COMPONENT_DIR/interfaces/inner_api/rs:asset_sdk",
  ]
  external_deps = [ "hilog:hilog_rust" ]
  crate_name = "asset_sdk_ffi"
  subsystem_name = "security"
  part_name = "asset"
}
