# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

COMPONENT_DIR = "//base/security/asset"

ohos_rust_shared_library("asset_sdk") {
  sources = [ "src/lib.rs" ]

  deps = [
    "$COMPONENT_DIR/frameworks/common:asset_common",
    "$COMPONENT_DIR/frameworks/ipc_interface:asset_ipc_interface",
    "$COMPONENT_DIR/frameworks/ipc_proxy:asset_ipc_proxy",
  ]

  external_deps = [
    "hilog:hilog_rust",
    "ipc:ipc_rust",
    "samgr:rust_samgr",
  ]

  crate_name = "asset_sdk"
  crate_type = "dylib"

  install_images = [ system_base_dir ]
  subsystem_name = "security"
  part_name = "asset"
}
