[package]
name = "asset_rust_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asset_common = { path = "../../../frameworks/common" }
asset_ipc_define_lib = { path = "../../../frameworks/ipc_define" }