# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

COMPONENT_DIR = "//base/security/asset"

ohos_ndk_library("libasset_ndk") {
  output_name = "asset_ndk"
  output_extension = "z.so"
  ndk_description_file = "./libasset.ndk.json"
  min_compact_version = "1"
}

ohos_ndk_headers("asset_header") {
  dest_dir = "$ndk_headers_out_dir/asset"
  sources = [
    "inc/asset_api.h",
    "inc/asset_type.h",
  ]
}

config("asset_config") {
  include_dirs = [ "inc" ]
}

ohos_shared_library("asset_ndk") {
  public_configs = [ ":asset_config" ]
  sources = [ "src/asset_api.c" ]
  deps = [
    ":asset_sdk_ffi",
    "$COMPONENT_DIR/frameworks/os_dependency/memory:asset_mem",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  cflags_cc = [
    "-Wall",
    "-Werror",
  ]

  relative_install_dir = "ndk"
  subsystem_name = "security"
  part_name = "asset"
}

ohos_rust_shared_ffi("asset_sdk_ffi") {
  sources = [ "src/lib.rs" ]
  deps = [
    "$COMPONENT_DIR/frameworks/os_dependency/log:asset_log",
    "$COMPONENT_DIR/frameworks/os_dependency/memory:asset_mem",
    "$COMPONENT_DIR/interfaces/inner_api/rs:asset_sdk",
  ]
  crate_name = "asset_sdk_ffi"
  subsystem_name = "security"
  part_name = "asset"
}
