# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

COMPONENT_DIR = "//base/security/asset"

ohos_static_library("crypto_manager_wrapper") {
  sources = [
    "src/crypto_wrapper.cpp",
    "src/hks_key_wrapper.cpp",
  ]

  include_dirs = [
    "inc",
    "$COMPONENT_DIR/frameworks/os_dependency/log/inc",
  ]

  deps = [
    "$COMPONENT_DIR/frameworks/os_dependency/memory:asset_mem",
    "//third_party/bounds_checking_function:libsec_shared",
  ]

  external_deps = [
    "hilog:libhilog",
    "huks:libhukssdk",
  ]
  subsystem_name = "security"
  part_name = "asset"
}