[package]
name = "crypto_manager_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asset_common = { path = "../../frameworks/common" }
crypto_manager = { path = "../../../services/crypto_manager" }