[package]
name = "db_operator_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

asset_definition = { path = "../../../frameworks/definition" }
asset_db_operator = { path = "../../../services/db_operator" }
