# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

COMPONENT_DIR = "//base/security/asset"

module_output_path = "asset/asset_UT_test"

ohos_unittest("asset_ndk_test") {
  module_out_path = module_output_path
  include_dirs = [ "inc" ]
  sources = [
    "src/asset_add_test.cpp",
    "src/asset_query_test.cpp",
    "src/asset_remove_test.cpp",
    "src/asset_test_common.cpp",
  ]
  deps = [ "$COMPONENT_DIR/interfaces/kits/c:asset_ndk" ]
}
